# rust-finance

./: .env.example  .gitignore  Cargo.toml  README.md  RELEASE.md  cliff.toml  deny.toml  docker-compose.yml
.github/: release.yml
.github/workflows/: codeql.yml  fuzz.yml  release.yml  scorecards.yml  security.yml  test.yml
benchmarks/: Cargo.toml
benchmarks/benches/: 03_risk_checks.rs  04_pricing_models.rs  05_institutional_benchmark.rs  09_memory_layout.rs
crates/ai/: Cargo.toml
crates/ai/src/: anthropic_client.rs  compaction.rs  dexter.rs  lib.rs  mirofish.rs  signal.rs  simulator.rs
crates/ai/tests/: test_anthropic.rs
crates/alerts/: Cargo.toml
crates/alerts/src/: engine.rs
crates/backtest/: Cargo.toml
crates/backtest/src/: benchmark.rs  engine.rs  fill_model.rs  lib.rs  metrics.rs  monte_carlo.rs  robustness.rs  strategy.rs  walk_forward.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  dashboard.rs  env_writer.rs  events.rs  exchange.rs  lib.rs  time.rs
crates/compliance/: Cargo.toml
crates/compliance/src/: audit_trail.rs  errors.rs  lib.rs  pre_trade.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: ai_pipeline.rs  bootstrap.rs  circuit_breaker.rs  engine.rs  hybrid_pipeline.rs  kill_switch.rs  lib.rs  main.rs  processor.rs  reconnect.rs  shutdown.rs  strategy.rs  strategy_registry.rs  telemetry.rs
crates/dashboard/: Cargo.toml
crates/dashboard/src/: main.rs
crates/event_bus/: Cargo.toml
crates/event_bus/src/: health.rs  lib.rs  subscriber.rs
crates/execution/: Cargo.toml
crates/execution/src/: almgren_chriss.rs  alpaca_executor.rs  bracket.rs  conditional.rs  dry_run.rs  exec_algo.rs  gateway.rs  lib.rs  mock_executor.rs  recording_executor.rs  router.rs  smart_router.rs  tca.rs  trade_updates.rs  trailing_stop.rs
crates/executor/: Cargo.toml
crates/executor/src/: dry_run.rs  lib.rs
crates/feature/: Cargo.toml
crates/fix/: Cargo.toml
crates/fix/src/: lib.rs  session.rs
crates/ingestion/: Cargo.toml
crates/ingestion/src/: alpaca_broker.rs  alpaca_ws.rs  finnhub_rest.rs  finnhub_ws.rs  gap_detector.rs  lib.rs  multiplexer.rs  news.rs  normalizer.rs  source.rs
crates/knowledge_graph/: Cargo.toml
crates/knowledge_graph/src/: graph.rs  impact.rs  lib.rs  ontology.rs  query.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs
crates/ml/: Cargo.toml
crates/ml/src/: alpha_monitor.rs  interval_regression.rs  lib.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs
crates/oms/: Cargo.toml
crates/oms/src/: blotter.rs  lib.rs  order.rs  position.rs  sebi.rs
crates/parser/: Cargo.toml
crates/persistence/: Cargo.toml
crates/persistence/src/: db.rs  dragonfly.rs  lib.rs  worker.rs
crates/polymarket/: Cargo.toml
crates/pricing/: Cargo.toml
crates/relay/: Cargo.toml
crates/risk/: Cargo.toml
crates/risk/src/: auto_flatten.rs  correlation.rs  daily_loss_limit.rs  drawdown_monitor.rs  egarch.rs  garch.rs  gate.rs  interceptor.rs  kill_switch.rs  lib.rs  pnl_attribution.rs  portfolio_var.rs  regime.rs  safety_gate.rs  self_match.rs  state.rs  var.rs  wal.rs
crates/signals/: Cargo.toml
crates/signer/: Cargo.toml
crates/strategy/: Cargo.toml
crates/swarm_sim/: Cargo.toml
crates/tests/: Cargo.toml
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  event_handler.rs  layout.rs  live_feed.rs  main.rs  setup.rs  state.rs
crates/tui/src/widgets/: candlestick_widget.rs  chart_widget.rs  help_overlay.rs  mod.rs  options_chain.rs
crates/web/: Cargo.toml
crates/web-dashboard/: Cargo.toml
docs/: AI_INTEGRATION.md  CURRENT_STATE.md  WSS_INGESTION.md  architecture.md  fix_plan.md
grafana/dashboards/: rustforge.json
tests/: pipeline.rs
(+79 files in other folders)
