[workspace]
resolver = "2"
members = [
  "crates/common",
  "crates/ingestion",
  "crates/parser",
  "crates/feature",
  "crates/strategy",
  "crates/model",
  "crates/risk",
  "crates/executor",
  "crates/signer",
  "crates/relay",
  "crates/daemon",
  "crates/event_bus",
  "crates/cli",
  "crates/tui",
  "crates/web",
  "crates/tests",
  "crates/persistence",
  "crates/ai",
  "crates/ml",
  "crates/backtest",
  "crates/compliance",
  "crates/execution",
  "crates/alerts",
  "crates/signals",
  "crates/pricing",
  "crates/metrics",
  "crates/fix",
  "crates/oms"
]

[workspace.dependencies]
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
thiserror = "1.0.58"
async-trait = "0.1.80"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
