[package]
name = "event_bus"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
common = { path = "../common" }
anyhow = "1.0"
tracing = "0.1"
tokio-retry = "0.3.0"
postcard = { version = "1.0", features = ["alloc"] }
